[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decman"
version = "0.3.4"
description = "Declarative package & configuration manager for Arch Linux."
license = {file = "LICENSE"}
authors = [
    {name = "Kivi Kaitaniemi"}
]
dependencies = [
    "requests",
]

[project.scripts]
decman = "decman.app:main"

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.9.3",
]
