[project]
name = "decman"
version = "1.0.0"
description = "Declarative package & configuration manager for Arch Linux."
license = {file = "LICENSE"}
authors = [
    {name = "Kivi Kaitaniemi"}
]
requires-python = ">=3.13"
dependencies = [
    "requests",
]

[project.scripts]
decman = "decman.app:main"

[project.entry-points."decman.plugins"]
systemd = "decman.plugins.systemd:Systemd"
pacman = "decman.plugins.pacman:Pacman"
aur = "decman.plugins.aur:AUR"
flatpak = "decman.plugins.flatpak:Flatpak"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # base style/errors
    "I",            # import sorting
    "B",            # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

