[project]
name = "decman-pacman"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
  "decman==1.2.0",
  "pyalpm",
  "requests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[project.entry-points."decman.plugins"]
pacman = "decman.plugins.pacman:Pacman"
aur = "decman.plugins.aur:AUR"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["decman.plugins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
